--- a/app/globals.css
+++ b/app/globals.css
@@ -56,4 +56,7 @@
     body {
       @apply bg-background text-foreground;
     }
+    .bg-noise {
+      background-image: url('/images/bg/noise.webp');
+    }
   }
